use fontmetricsF that fixes positioning (and using qreal for calc) new style without dotted lines is wanted

BUG: 303553